@@ -8,7 +8,6 @@ import ru.otus.hw.dto.AuthorDto;
 import ru.otus.hw.repositories.AuthorRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -23,6 +22,6 @@ public class AuthorServiceImpl implements AuthorService {
         return authorRepository.findAll()
                 .stream()
                 .map(converter::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
