@@ -8,7 +8,6 @@ import ru.otus.hw.dto.GenreDto;
 import ru.otus.hw.repositories.GenreRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -20,6 +19,6 @@ public class GenreServiceImpl implements GenreService {
     @Override
     @Transactional(readOnly = true)
     public List<GenreDto> findAll() {
-        return genreRepository.findAll().stream().map(genreDtoConverter::toDto).collect(Collectors.toList());
+        return genreRepository.findAll().stream().map(genreDtoConverter::toDto).toList();
     }
 }
