@@ -4,16 +4,14 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.data.mongo.DataMongoTest;
-import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import ru.otus.hw.converters.dto.GenreDtoConverter;
 import ru.otus.hw.models.Genre;
 
-import java.util.stream.Collectors;
-
 import static org.assertj.core.api.Assertions.assertThat;
 
-@ComponentScan(basePackages = "ru.otus.hw")
+@Import({GenreServiceImpl.class, GenreDtoConverter.class})
 @DataMongoTest
 
 public class GenreServiceImplTest {
@@ -31,7 +29,7 @@ public class GenreServiceImplTest {
     @Test
     void findAllTest() {
         var genres = mongoTemplate.findAll(Genre.class)
-                .stream().map(genre->converter.toDto(genre)).collect(Collectors.toList());
+                .stream().map(genre->converter.toDto(genre)).toList();
         var actualServiceGenres = genreService.findAll();
 
         assertThat(genres)
